--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/auth-helpers-nextjs": "^0.8.7"
   },
   "devDependencies": {
     "@types/node": "^22",
