--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
     "zod": "^3.24.1",
-    "@supabase/supabase-js": "^2.39.3",
-    "@supabase/auth-helpers-nextjs": "^0.8.7"
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.3"
   },
   "devDependencies": {
     "@types/node": "^22",
